refactor: move cors.allowed-origins into Spring profile properties Extract allowed origins from hardcoded Java (SecurityConfig) and hardcoded properties into a single cors.allowed-origins property. Both SecurityConfig.corsConfigurationSource() and the actuator CORS now read from this one key. localhost:3000 removed from production and moved to application-dev.properties only.